src/test/ui/resolve/resolve-variant-assoc-item.stderr
error[E0433]: failed to resolve: `V` is a variant, not a module
  --> $DIR/resolve-variant-assoc-item.rs:5:8
   |
LL |     E::V::associated_item;
   |        ^ `V` is a variant, not a module

error[E0433]: failed to resolve: `V` is a variant, not a module
  --> $DIR/resolve-variant-assoc-item.rs:6:5
   |
LL |     V::associated_item;
   |     ^ `V` is a variant, not a module

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
